--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Dịch Ngôn Ngữ - NLLB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NLLB Translator</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -13,32 +13,35 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
         }
         .container {
             background: white;
-            padding: 40px;
             border-radius: 15px;
+            padding: 40px;
             max-width: 600px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         }
         .result {
             margin-top: 20px;
             padding: 15px;
             background: #f8f9fa;
             border-left: 5px solid #667eea;
+            border-radius: 8px;
         }
         .error {
-            color: #dc3545;
+            color: red;
+            font-weight: bold;
         }
     </style>
 </head>
-
 <body>
+
 <div class="container">
-    <h1 class="text-center mb-4">
-        <i class="fas fa-language"></i> Dịch Ngôn Ngữ
-    </h1>
+    <h2 class="text-center mb-4">
+        <i class="fas fa-language"></i> NLLB Translator
+    </h2>
 
     <div class="mb-3">
         <label class="form-label">Văn bản cần dịch</label>
@@ -49,69 +52,77 @@
         <div class="col-md-6 mb-3">
             <label class="form-label">Ngôn ngữ nguồn</label>
             <select id="source_lang" class="form-select">
-                <option value="en">Tiếng Anh</option>
-                <option value="vi">Tiếng Việt</option>
-                <option value="fr">Tiếng Pháp</option>
+                <option value="en">English</option>
+                <option value="vi">Vietnamese</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+                <option value="de">German</option>
+                <option value="ru">Russian</option>
             </select>
         </div>
 
         <div class="col-md-6 mb-3">
             <label class="form-label">Ngôn ngữ đích</label>
             <select id="target_lang" class="form-select">
-                <option value="vi">Tiếng Việt</option>
-                <option value="en">Tiếng Anh</option>
-                <option value="fr">Tiếng Pháp</option>
+                <option value="vi">Vietnamese</option>
+                <option value="en">English</option>
+                <option value="fr">French</option>
+                <option value="es">Spanish</option>
+                <option value="de">German</option>
+                <option value="ru">Russian</option>
             </select>
         </div>
     </div>
 
     <div class="text-center">
-        <button class="btn btn-primary" onclick="translateText()">
-            <i class="fas fa-exchange-alt"></i> Dịch Ngay
+        <button onclick="translateText()" class="btn btn-primary">
+            <i class="fas fa-exchange-alt"></i> Dịch
         </button>
     </div>
 
-    <div id="result" class="result d-none"></div>
+    <div id="result" class="result" style="display:none;"></div>
 </div>
 
 <script>
+const API_URL = "https://haichim25-nllb-translator-api.hf.space/api/translate";
+
 async function translateText() {
     const text = document.getElementById("text").value;
-    const sourceLang = document.getElementById("source_lang").value;
-    const targetLang = document.getElementById("target_lang").value;
+    const source_lang = document.getElementById("source_lang").value;
+    const target_lang = document.getElementById("target_lang").value;
     const resultDiv = document.getElementById("result");
 
-    resultDiv.classList.remove("d-none");
-    resultDiv.innerText = "⏳ Đang dịch...";
+    resultDiv.style.display = "block";
+    resultDiv.innerHTML = "⏳ Đang dịch...";
 
     try {
-        const res = await fetch(
-            "https://haichim25-nllb-translator-api.hf.space/api/translate",
-            {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    text: text,
-                    source_lang: sourceLang,
-                    target_lang: targetLang
-                })
-            }
-        );
+        const res = await fetch(API_URL, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                text,
+                source_lang,
+                target_lang
+            })
+        });
 
         const data = await res.json();
 
-        if (data.error) {
-            resultDiv.innerHTML = `<span class="error">❌ ${data.error}</span>`;
-        } else {
+        if (data.translated) {
             resultDiv.innerHTML = `<b>Kết quả:</b><br>${data.translated}`;
+        } else {
+            resultDiv.innerHTML = `<span class="error">${data.error}</span>`;
         }
 
     } catch (err) {
-        resultDiv.innerHTML = `<span class="error">❌ Không kết nối được backend</span>`;
+        resultDiv.innerHTML = `<span class="error">Lỗi kết nối API</span>`;
     }
 }
 </script>
+
 </body>
 </html>
+
+
