--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <div id="result" class="result" style="display:none;"></div>
-    div class="text-center mt-3">
+    <div class="text-center mt-3">
     <button onclick="speakText()" class="btn btn-success">
         <i class="fas fa-volume-up"></i> Nghe kết quả
     </button>
@@ -156,6 +156,7 @@ async function translateText() {
 
 </body>
 </html>
+
 
 
 
