--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap + FontAwesome + Animate.css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!-- Thêm lại cho animations -->
 
     <style>
         body {
@@ -18,74 +18,51 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Poppins', sans-serif; /* Thêm font vui mắt */
         }
         .container {
-            background: rgba(255, 255, 255, 0.95); /* Mờ để thấy ảnh nền */
-            border-radius: 20px;
-            padding: 40px;
-            max-width: 1100px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
-            backdrop-filter: blur(10px); /* Hiệu ứng kính */
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 15px;
+            padding: 30px;
+            max-width: 1000px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            animation: fadeIn 1s ease-in; /* Animation khi load */
         }
         .card {
             border: none;
-            border-radius: 15px;
+            border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
         .result {
-            margin-top: 20px;
-            padding: 20px;
-            background: linear-gradient(45deg, #f8f9fa, #e9ecef);
+            margin-top: 15px;
+            padding: 15px;
+            background: #f8f9fa;
             border-left: 5px solid #667eea;
-            border-radius: 12px;
-            position: relative;
-        }
-        .result::before {
-            content: "🎉"; /* Sticker thành công */
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 24px;
+            border-radius: 8px;
         }
         .error {
-            color: #dc3545;
+            color: red;
             font-weight: bold;
         }
         .history-box {
-            max-height: 450px;
+            max-height: 420px;
             overflow-y: auto;
-            padding-right: 10px;
+            padding-right: 5px;
         }
         .history-item {
-            background: linear-gradient(45deg, #f1f3f5, #e3f2fd);
-            border-radius: 12px;
-            padding: 15px;
-            margin-bottom: 15px;
-            transition: transform 0.3s ease;
-            cursor: pointer;
+            background: #f1f3f5;
+            border-radius: 8px;
+            padding: 10px;
+            margin-bottom: 10px;
+            transition: background 0.3s ease;
         }
         .history-item:hover {
-            transform: scale(1.02);
-            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+            background: #e3f2fd;
         }
         .lang-icon {
             margin-right: 8px;
         }
-        .badge {
-            font-size: 0.8em;
-        }
         .btn {
-            border-radius: 25px;
-            transition: all 0.3s ease;
-        }
-        .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
-        .spinner-border {
-            width: 1rem;
-            height: 1rem;
+            border-radius: 20px;
         }
         /* Mobile responsive */
         @media (max-width: 768px) {
@@ -100,27 +77,26 @@
 </head>
 <body>
 
-<div class="container animate__animated animate__fadeIn">
+<div class="container">
     <div class="row">
 
         <!-- ================= LEFT: TRANSLATOR ================= -->
         <div class="col-md-7">
             <div class="card p-4 mb-4">
                 <h4 class="text-center mb-4">
-                    <i class="fas fa-language text-primary"></i> NLLB Translator
-                    <span class="badge bg-success ms-2">AI-Powered</span> <!-- Badge sticker -->
+                    <i class="fas fa-language"></i> NLLB Translator
                 </h4>
 
                 <div class="mb-3">
                     <label class="form-label"><i class="fas fa-edit lang-icon"></i> Văn bản cần dịch</label>
-                    <textarea id="text" class="form-control" rows="4" placeholder="Nhập văn bản ở đây..."></textarea>
+                    <textarea id="text" class="form-control" rows="4"></textarea>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label class="form-label"><i class="fas fa-globe lang-icon"></i> Ngôn ngữ nguồn</label>
                         <select id="source_lang" class="form-select">
-                            <option value="en">🇺🇸 English</option> <!-- Thêm cờ sticker -->
+                            <option value="en">🇺🇸 English</option>
                             <option value="vi">🇻🇳 Vietnamese</option>
                             <option value="fr">🇫🇷 French</option>
                             <option value="es">🇪🇸 Spanish</option>
@@ -143,18 +119,18 @@
                 </div>
 
                 <div class="text-center mb-3">
-                    <button onclick="translateText()" class="btn btn-primary me-2" data-bs-toggle="tooltip" title="Dịch ngay!">
+                    <button onclick="translateText()" class="btn btn-primary">
                         <i class="fas fa-exchange-alt"></i> Dịch
                     </button>
-                    <button onclick="speakText()" class="btn btn-success me-2" data-bs-toggle="tooltip" title="Nghe kết quả">
+                    <button onclick="speakText()" class="btn btn-success ms-2">
                         <i class="fas fa-volume-up"></i> Nghe
                     </button>
-                    <button onclick="swapLanguages()" class="btn btn-secondary" data-bs-toggle="tooltip" title="Đổi ngôn ngữ">
+                    <button onclick="swapLanguages()" class="btn btn-secondary ms-2">
                         <i class="fas fa-arrows-alt-h"></i> Swap
                     </button>
                 </div>
 
-                <div id="result" class="result animate__animated animate__fadeIn" style="display:none;"></div>
+                <div id="result" class="result" style="display:none;"></div>
             </div>
         </div>
 
@@ -162,13 +138,12 @@
         <div class="col-md-5">
             <div class="card p-4">
                 <h5 class="mb-3">
-                    <i class="fas fa-history text-info"></i> Lịch sử tra cứu
-                    <span class="badge bg-warning text-dark">Mới</span> <!-- Badge sticker -->
+                    <i class="fas fa-history"></i> Lịch sử tra cứu
                 </h5>
 
                 <div id="history" class="history-box"></div>
 
-                <div class="text-end mt-3">
+                <div class="text-end mt-2">
                     <button class="btn btn-sm btn-danger" onclick="clearHistory()">
                         <i class="fas fa-trash"></i> Xóa lịch sử
                     </button>
@@ -179,22 +154,6 @@
     </div>
 </div>
 
-<!-- Modal cho lịch sử chi tiết (tùy chọn, để bắt mắt hơn) -->
-<div class="modal fade" id="historyModal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"><i class="fas fa-eye"></i> Chi tiết lịch sử</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body" id="modalContent">
-                <!-- Nội dung sẽ được điền bởi JS -->
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 const API_URL = "https://haichim25-nllb-translator-api.hf.space/api/translate";
 
@@ -206,12 +165,12 @@ async function translateText() {
     const resultDiv = document.getElementById("result");
 
     if (!text) {
-        alert("Vui lòng nhập văn bản!");
+        alert("Vui lòng nhập văn bản");
         return;
     }
 
     resultDiv.style.display = "block";
-    resultDiv.innerHTML = '<div class="d-flex align-items-center"><div class="spinner-border text-primary me-2"></div> Đang dịch...</div>';
+    resultDiv.innerHTML = "⏳ Đang dịch...";
 
     try {
         const res = await fetch(API_URL, {
@@ -267,7 +226,7 @@ function loadHistory() {
 
     history.forEach(h => {
         box.innerHTML += `
-            <div class="history-item" onclick="showHistoryDetail('${h.src}', '${h.tgt}', '${h.sLang}', '${h.tLang}', '${h.time}')">
+            <div class="history-item">
                 <b>${h.sLang} → ${h.tLang}</b><br>
                 <small>${h.time}</small><br>
                 <i>${h.src}</i><br>
@@ -282,31 +241,12 @@ function clearHistory() {
     loadHistory();
 }
 
-// ================= ADDITIONAL: SWAP & MODAL =================
+// ================= ADDITIONAL: SWAP =================
 function swapLanguages() {
     const src = document.getElementById("source_lang");
     const tgt = document.getElementById("target_lang");
     [src.value, tgt.value] = [tgt.value, src.value];
 }
-
-function showHistoryDetail(src, tgt, sLang, tLang, time) {
-    const modal = new bootstrap.Modal(document.getElementById('historyModal'));
-    document.getElementById('modalContent').innerHTML = `
-        <p><strong>Nguồn:</strong> ${src}</p>
-        <p><strong>Dịch:</strong> ${tgt}</p>
-        <p><strong>Ngôn ngữ:</strong> ${sLang} → ${tLang}</p>
-        <p><strong>Thời gian:</strong> ${time}</p>
-    `;
-    modal.show();
-}
-
-// Init tooltips
-document.addEventListener('DOMContentLoaded', function () {
-    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-        return new bootstrap.Tooltip(tooltipTriggerEl);
-    });
-});
 
 loadHistory();
 </script>
