--- a/index.html
+++ b/index.html
@@ -8,62 +8,129 @@
     <!-- Bootstrap + FontAwesome + Animate.css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!-- Thêm lại cho animations -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <style>
+        :root {
+            --bg-color: linear-gradient(135deg, #667eea 0%, #764ba2 100%), url('https://source.unsplash.com/featured/?language,translation') no-repeat center center fixed;
+            --container-bg: rgba(255, 255, 255, 0.9);
+            --card-bg: #ffffff;
+            --text-color: #000000;
+            --result-bg: #f8f9fa;
+            --history-bg: #f1f3f5;
+            --history-hover: #e3f2fd;
+            --btn-primary: #007bff;
+            --btn-success: #28a745;
+            --btn-secondary: #6c757d;
+            --btn-danger: #dc3545;
+        }
+
+        body.dark-mode {
+            --bg-color: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
+            --container-bg: rgba(33, 37, 41, 0.9);
+            --card-bg: #343a40;
+            --text-color: #ffffff;
+            --result-bg: #495057;
+            --history-bg: #495057;
+            --history-hover: #6c757d;
+            --btn-primary: #0d6efd;
+            --btn-success: #198754;
+            --btn-secondary: #5c636a;
+            --btn-danger: #dc3545;
+        }
+
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%), url('https://source.unsplash.com/featured/?language,translation') no-repeat center center fixed;
+            background: var(--bg-color);
             background-size: cover;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            color: var(--text-color);
+            transition: background 0.3s ease, color 0.3s ease;
         }
+
         .container {
-            background: rgba(255, 255, 255, 0.9);
+            background: var(--container-bg);
             border-radius: 15px;
             padding: 30px;
             max-width: 1000px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            animation: fadeIn 1s ease-in; /* Animation khi load */
+            animation: fadeIn 1s ease-in;
+            transition: background 0.3s ease;
         }
+
         .card {
+            background: var(--card-bg);
             border: none;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transition: background 0.3s ease;
         }
+
         .result {
             margin-top: 15px;
             padding: 15px;
-            background: #f8f9fa;
-            border-left: 5px solid #667eea;
+            background: var(--result-bg);
+            border-left: 5px solid var(--btn-primary);
             border-radius: 8px;
+            transition: background 0.3s ease;
         }
+
         .error {
-            color: red;
+            color: #dc3545;
             font-weight: bold;
         }
+
         .history-box {
             max-height: 420px;
             overflow-y: auto;
             padding-right: 5px;
         }
+
         .history-item {
-            background: #f1f3f5;
+            background: var(--history-bg);
             border-radius: 8px;
             padding: 10px;
             margin-bottom: 10px;
             transition: background 0.3s ease;
         }
+
         .history-item:hover {
-            background: #e3f2fd;
+            background: var(--history-hover);
         }
+
         .lang-icon {
             margin-right: 8px;
         }
+
         .btn {
             border-radius: 20px;
+            transition: background 0.3s ease;
         }
+
+        .btn-primary { background-color: var(--btn-primary); }
+        .btn-success { background-color: var(--btn-success); }
+        .btn-secondary { background-color: var(--btn-secondary); }
+        .btn-danger { background-color: var(--btn-danger); }
+
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            background: var(--card-bg);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            transition: background 0.3s ease;
+        }
+
         /* Mobile responsive */
         @media (max-width: 768px) {
             .container {
@@ -72,10 +139,21 @@
             .history-box {
                 max-height: 300px;
             }
+            .theme-toggle {
+                top: 10px;
+                right: 10px;
+                width: 40px;
+                height: 40px;
+            }
         }
     </style>
 </head>
 <body>
+
+<!-- Theme Toggle Button -->
+<button class="theme-toggle" onclick="toggleTheme()" id="themeBtn">
+    <i class="fas fa-sun"></i> <!-- Icon mặc định: sáng -->
+</button>
 
 <div class="container">
     <div class="row">
@@ -157,6 +235,25 @@
 <script>
 const API_URL = "https://haichim25-nllb-translator-api.hf.space/api/translate";
 
+// ================= THEME TOGGLE =================
+function toggleTheme() {
+    const body = document.body;
+    const btn = document.getElementById('themeBtn');
+    body.classList.toggle('dark-mode');
+    const isDark = body.classList.contains('dark-mode');
+    btn.innerHTML = isDark ? '<i class="fas fa-moon"></i>' : '<i class="fas fa-sun"></i>';
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+}
+
+// Load theme on page load
+document.addEventListener('DOMContentLoaded', () => {
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+        document.body.classList.add('dark-mode');
+        document.getElementById('themeBtn').innerHTML = '<i class="fas fa-moon"></i>';
+    }
+});
+
 // ================= TRANSLATE =================
 async function translateText() {
     const text = document.getElementById("text").value;
@@ -183,7 +280,7 @@ async function translateText() {
 
         if (data.translated) {
             resultDiv.innerHTML = `<b>Kết quả:</b><br>${data.translated}`;
-            resultDiv.classList.add('animate__bounceIn'); // Animation khi thành công
+            resultDiv.classList.add('animate__bounceIn');
             saveHistory(text, data.translated, source_lang, target_lang);
             loadHistory();
         } else {
